--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,14 +2,12 @@ Package: moonsun
 Type: Package
 Title: Basic astronomical calculations with R
 Version: 0.1.3
-Date: 2013-12-30
-Author: Lukasz Komsta <lukasz.komsta@umlub.pl>
-Maintainer: Lukasz Komsta <lukasz.komsta@umlub.pl>
+Date: 2019-10-03
+Author: Lukasz Komsta
+Maintainer: Lukasz Komsta <luke@novum.am.lublin.pl>
 Description: A collection of basic astronomical routines for R based on
         "Practical astronomy with your calculator" by Peter
         Duffet-Smith.
 License: GPL-2
-Packaged: 2013-12-30 10:17:48 UTC; luke
-Repository: CRAN
-Date/Publication: 2013-12-30 11:44:37
-NeedsCompilation: no
+LazyLoad: yes
+LazyData: true
